--- a/.env.dist
+++ b/.env.dist
@@ -1,3 +1,3 @@
-# .env
+# Rename this file to .env and fill in your own values.
 BINANCE_API_KEY=put_your_binance_api_key_here
 BINANCE_SECRET_KEY=put_your_binance_secret_key_here
