--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "ts-node src/index.ts",
     "build": "tsc",
-    "test": "jest",
+    "test": "jest --coverage",
     "lint": "eslint . --ext .ts",
     "format": "prettier --write ."
   },
